Sunday, March 10 2002, James Turner

	* Set a default orientation on Entities, to avoid some
	  nasty behaviour that Simon was seeing. Set w=1, x/y/z=0.

Friday, March 08 2002, James Turner

	* Fixed .so version information. Thanks to Damien for the
	  motivation, and Ron Steinke for showing me how.

Thursday, March 07 2002, James Turner

	* Changed delay on select() to be 0,0 : previously it was
	  10 milliseconds, which is a bit harsh on the clients.
	* Changed World::recvSightMove to use the ID argument of
	  the Move operation, instead of it's FROM. This should
	  fix reporting of pick/drop ops. Both these fixes
	  are suggested by Al Riddoch.

Wednesday, March 06 2002, James Turner

	* Fixed character looks to actually work (had name and type
	  name args to ClaassDispatcher child in the wrong order!)
	* Implemented disptch-safe adding and removal of subdispatchers.

Monday, March 04 2002, Al Riddoch

	* Fix removal of deleted entities from their container.

Saturday, March 02 2002, James Turner

	* Applied Ron Steinke's patch for WFMath support
	* Bumped version to 0.9.2 so people can test against the
	  WFMath-enabled version
	* Added README-wfmath-conversion, explaining how to
	  migrate a client to the new API

Monday, February 11 2002, James Turner

	* Implemented Player::getAccountID();

Sunday, February 10 2002, James Turner

	* Added wait for INFO(LOGOUT) response from server, 
	  and a timeout in case the server doesn't support that
	* Added a signal on Player when a logout completes
	* Added a comment in World.cpp about the TO field on
	  IG LOOK ops.
	* Added another 'foundation' dispatcher to Connection
	  (op:info:op)

Friday, Febuary 08 2002, Al Riddoch

	* Clear TO on IG Look ops.

Sunday, February 03 2002, James Turner

	* Fixed logout (set FROM)
	* Changed character API, let me know what you think.
	* Implemented TypeInfo::getParentsAsSet

Tuesday, January 29 2002, James Turner

	* Support for sending private chat messages (using a new